# jsonapi-serde

./: .pre-commit-config.yaml  README.md  requirements-dev.txt  setup.cfg
docs/source/: conf.py  deferred.rst  ifaces.rst  impl_sqlalchemy.rst  index.rst  serde.rst
src/jsonapi_serde/: declarative.py  defaults.py  deferred.py  exceptions.py  interfaces.py  mapper.py  models.py
src/jsonapi_serde/implementations/sqlalchemy/: __init__.py  core.py  declarative.py  defaults.py  querying.py
src/jsonapi_serde/implementations/sqlalchemy/tests/: test_declarative.py  test_querying.py  test_sqlalchemy.py
src/jsonapi_serde/serde/: builders.py  deserializer.py  exceptions.py  interfaces.py  models.py  renderer.py  types.py
src/jsonapi_serde/serde/tests/: test_deserializer.py  test_renderer.py  test_serde.py
src/jsonapi_serde/serde/utils/: __init__.py  converter.py  formatting.py
src/jsonapi_serde/serde/utils/tests/: test_converter.py  test_jsonpointer.py
src/jsonapi_serde/tests/: test_declarative.py  test_mapper.py  testing.py
src/jsonapi_serde/utils/: __init__.py  types.py  typing.py
