[metadata]
name = jsonapi-serde
version = 0.0.9
description = JSONAPI serializer/deserializer with ORM support
long_description = file:README.md
author = Moriyoshi Koizumi <mozo@mozo.jp>
keywords = jsonapi, sqlalchemy
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
install_requires =
    iso8601
tests_require =
    pytest
packages = find:
package_dir =
    = src

[options.package_data]
* =
    py.typed

[options.packages.find]
where = src

[options.extras_require]
sqlalchemy = sqlalchemy >= 1.3

[mypy]
files = src/
